--- a/content/projects.json
+++ b/content/projects.json
@@ -5,6 +5,7 @@
             "type": "E-voting",
             "year": 2021,
             "organization": "KPR FMIPA UNS",
+            "clients": ["KPR FMIPA UNS", "HMJM FEB UNS", "KPU FEB UNS", "KPU FKIP UNS", "KPUR FH UMS", "KPU FT UNS"],
             "roles": ["Operations & Publications Director", "Software Developer", "Individual"],
             "techs": ["PHP", "MySQL", "CodeIgniter 4", "Materialize CSS", "jQuery", "DataTables", "Chart.js", "Cryptographic Hash", "Message Authentication Code"],
             "image": "pemiluraya.jpg",
@@ -16,6 +17,7 @@
             "type": "E-ticketing",
             "year": 2021,
             "organization": "Himpunan Mahasiswa Informatika UNS",
+            "clients": null,
             "roles": ["Technology Director", "Lead Software Developer", "Team"],
             "techs": ["PHP", "MySQL", "CodeIgniter 3", "Bootstrap CSS", "jQuery", "AdminLTE", "SVG", "Animations", "JSON Web Token", "Single-Sign-On (SSO)"],
             "image": "pingfest-ticketing.jpg",
@@ -23,11 +25,12 @@
             "demo": null
         },
         {
-            "name": "P!NGFEST (CBT, based on ZLearn Project)",
+            "name": "P!NGFEST (CBT from ZLearn Project)",
             "type": "Computer-Based Test",
             "year": 2021,
-            "organization": "Himpunan Mahasiswa Informatika UNS",
-            "roles": ["Technology Director", "Lead Software Developer", "Individual"],
+            "organization": null,
+            "clients": ["P!NGFEST UNS"],
+            "roles": ["Software Developer", "Individual"],
             "techs": ["PHP", "MySQL", "CodeIgniter 3", "Bootstrap CSS", "jQuery", "pdf.js", "JSON Web Token", "Single-Sign-On (SSO)"],
             "image": "pingfest-cbt.jpg",
             "projectURL": "https://github.com/michaelrk02/zlearn",
@@ -37,7 +40,8 @@
             "name": "Guru Favorit (GURFAV)",
             "type": "E-voting",
             "year": 2019,
-            "organization": "MPK SMAN 3 Surakarta",
+            "organization": "Administrator SMAN 3 Surakarta",
+            "clients": ["MPK SMAN 3 Surakarta"],
             "roles": ["Software Developer", "Individual", "Outsourcing"],
             "techs": ["PHP", "MySQL", "CodeIgniter 3", "Spectre CSS", "Vue.js", "GD Plugin"],
             "image": "gurfav.jpg",
@@ -48,7 +52,8 @@
             "name": "Pemilihan Ketua OSIS (PEMILOS, E-voting)",
             "type": "E-voting",
             "year": 2019,
-            "organization": "MPK SMAN 3 Surakarta",
+            "organization": "Administrator SMAN 3 Surakarta",
+            "clients": ["MPK SMAN 3 Surakarta"],
             "roles": ["Software Developer", "Individual", "Outsourcing"],
             "techs": ["PHP", "MySQL", "CodeIgniter 3", "W3.CSS", "Vue.js"],
             "image": "pemilos-voting.jpg",
@@ -59,7 +64,8 @@
             "name": "Pemilihan Ketua OSIS (PEMILOS, CBT)",
             "type": "Computer-Based Test",
             "year": 2019,
-            "organization": "MPK SMAN 3 Surakarta",
+            "organization": "Administrator SMAN 3 Surakarta",
+            "clients": ["MPK SMAN 3 Surakarta"],
             "roles": ["Software Developer", "Individual", "Outsourcing"],
             "techs": ["PHP", "MySQL", "CodeIgniter 3", "W3.CSS", "Vue.js", "Mathjax"],
             "image": "pemilos-cbt.jpg",
@@ -71,6 +77,7 @@
             "type": "E-ticketing",
             "year": 2019,
             "organization": "OSIS SMAN 3 Surakarta",
+            "clients": null,
             "roles": ["Ticketing Staff", "Software Developer", "Individual"],
             "techs": ["PHP", "MySQL", "CodeIgniter 3", "W3.CSS", "Vue.js", "Chart.js", "QR-Code"],
             "image": "aksen.jpg",
@@ -82,6 +89,7 @@
             "type": "2D Top-Down Shooter Game",
             "year": 2018,
             "organization": "Administrator SMAN 3 Surakarta",
+            "clients": null,
             "roles": ["Team Leader", "Game Programmer"],
             "techs": ["C#", "Unity Engine"],
             "image": "tvmr.jpg",
